--- a/index.html
+++ b/index.html
@@ -2,249 +2,58 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Leonardo Fallardi - Portfolio</title>
+	<title>HUGE - Portfolio</title>
 
-
-
+	<!--INICIO BOOSTRAP -->
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+" crossorigin="anonymous">
 
 	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap-theme.min.css" integrity="sha384-jzngWsPS6op3fgRCDTESqrEJwRKck+CILhJVO5VvaAZCq8JYf8HsR/HPpBOOPZfR" crossorigin="anonymous">
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
 
 	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css">-->
-
-	<script src="https://use.fontawesome.com/cd5c78b712.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js" integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw" crossorigin="anonymous"></script>
+	
+	<!--FIN BOOSTRAP -->
 
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-
-
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="https://use.fontawesome.com/1470c0667e.js"></script>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-81469889-1', 'auto');
-	  ga('send', 'pageview');
-
-	</script>
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Pacifico" rel="stylesheet">
 
 </head>
 <body>
 
-	<header>
-	<!-- MENU NORMAL -->
-		<nav class="navbar navbar-default visible-lg visible-md visible-sm">
-			<div class="container">
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    	<div class="navbar-header">
-		      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" aria-expanded="false">
-			        	<span class="sr-only">Toggle navigation</span>
-			        	<span class="icon-bar"></span>
-			        	<span class="icon-bar"></span>
-			        	<span class="icon-bar"></span>
-		      		</button>
-		      		<a class="navbar-brand" href="#"><img src="imgs/logo-neg.png"></a>
-		    	</div>
-
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    	<div class="collapse navbar-collapse navbar-right">
-		      		<ul class="nav navbar-nav cl-effect-1">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-		      		</ul>
-		    	</div><!-- /.navbar-collapse -->
-	  		</div><!-- /.container-fluid -->
-		</nav>
-		<!-- MENU NORMAL -->
-
-		<!-- MENU RESPONSIVE -->
-		<nav class="navbar navbar-default visible-xs ">
+	<head>
+		<nav class="navbar navbar-default">
 			<div class="container-fluid">
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    	<div class="navbar-header">
-		      		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-			        	<span class="sr-only">Toggle navigation</span>
-			        	<span class="icon-bar"></span>
-			        	<span class="icon-bar"></span>
-			        	<span class="icon-bar"></span>
-		      		</button>
-		      		<a class="navbar-brand-inverse" href="#"><img src="imgs/logo-neg.png"></a>
-		    	</div>
+			<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Brand</a>
+				</div>
 
-		    <!-- Collect the nav links, forms, and other content for toggling -->
-		    	<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
-		      		<ul class="nav navbar-nav responsive_a pepito">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="portfolio.html">Portfolio</a></li>
-						<li><a href="contacto.html">Contacto</a></li>
-		      		</ul>
-		    	</div><!-- /.navbar-collapse -->
-	  		</div><!-- /.container-fluid -->
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="#">Link</a></li>
+					</ul>
+				</div><!-- /.navbar-collapse -->
+			</div><!-- /.container-fluid -->
 		</nav>
-		<!-- MENU RESPONSIVE -->			
-	</header>
-
-	<section id="portada">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-xs-12">
-					<div class="titulo text-center">
-						<h1 class="jumbotron">Leonardo Fallardi</h1>
-						<p>Diseñador Gráfico, diseño web, web responsive, SEO</p>
-						<div class="row">
-							<span class="ion-edit"></span>
-							<span class="fa fa-code" aria-hidden="true"></span>
-							<span class="ion-social-html5" aria-hidden="true"></span>
-							<span class="ion-social-css3" aria-hidden="true"></span>
-							<span class="ion-social-sass" aria-hidden="true"></span>
-							<span class="ion-social-github" aria-hidden="true"></span>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>	
-
-	<section id="intro-about">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-3 col-xs-12">
-					<img src="" class="img-circle">
-				</div>
-				<div class="col-lg-6 col-lg-offset-3 col-xs-12 text-center">
-					<p>Me llamo Leonardo, soy Diseñador Gráfico y desarrollador web Front-end (HTML5, CSS3, SASS, BOOTSTRAP y GITHUB).<br>Tengo formación y experiencia en diferentes ramas del diseño. Como desarrollador mis diseños y códigos son limpios, reutilizables y responsive.</p>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section id="servicios">
-		<div class="container">
-			<div class="row text-center">
-				<h2>Servicios</h2>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 contenido">
-					<div>
-						<span class="text-center"><i class="ion-edit"></i></span>
-						<div class="contenido">
-							<h3>Diseño Gr&aacute;fico</h3>
-							<p>Diseño de Marca, Identidad Corporativa, Editorial, Señaletico, Arte de Tapa, Carteleria y Afiches.</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 contenido">
-					<div class="serv-ico">
-						<span class="text-center"><i class="ion-ipad"></i></span>
-						<div>
-							<h3>Diseño Front-End</h3>
-							<p>Diseño Web, web responsive (ajustable a cualquier dispositivo), HTML5, CSS3, SASS, Bootstrap y mantenimiento de sitios.</p>
-							<div>
-								<span class="ion-social-html5 sist-prog" aria-hidden="true"></span>
-								<span class="ion-social-css3 sist-prog" aria-hidden="true"></span>
-								<span class="ion-social-sass sist-prog" aria-hidden="true"></span>
-								<span class="ion-social-github sist-prog" aria-hidden="true"></span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 contenido">
-					<div class="serv-ico">
-						<span class="text-center"><i class="ion-ios-gear"></i></span>
-						<div>
-							<h3>SEO</h3>
-							<p>Posicionamiento en buscadores, administración de información</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<footer>
-		<section id="datos">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-4 col-xs-12 columna-1">
-						<div class="logo">
-							<img src="imgs/logo-neg.png">
-						</div>
-						<div>
-							<h5>Leonardo Fallardi</h5>
-							<p>Diseño Gr&aacute;fico, Web, Marcario</p>
-						</div>
-						<div id="socialnet">
-							<a href="https://www.facebook.com/leonardo.fallardi" target="_blank">
-								<i class="fa fa-facebook-official" aria-hidden="true"></i>
-							Facebook
-							</a>
-							<a href="https://www.instagram.com/leofallardi/" target="_blank">
-								<i class="fa fa-instagram" aria-hidden="true"></i>
-							Instagram
-							</a>
-						</div>						
-					</div>
-					<div class="col-lg-4 col-xs-12 columna-2">
-						<div class="col-lg-6 col-xs-12">
-							<h5>Branding</h5>
-							<ul id="branding">
-								<li>Logotipo</li>
-								<li>Isotipo</li>
-								<li>Isologotipo</li>
-								<li>Manuales Marcarios</li>
-							</ul>
-						</div>
-						<div class="col-lg-6 col-xs-12">
-							<h5>WEB &amp; MULTIMEDIA</h5>
-							<ul id="web">
-								<li>Web</li>
-								<li>Mantenimiento y posicionamiento</li>
-								<li>Posicionamiento SEO</li>
-								<li>Redes Sociales</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-4 col-xs-12 columna-3">
-						<h5>Contacto:</h5>
-							<div>
-								<span class="fa fa-paper-plane"></span>
-								<p>leonardofallardi@gmail.com</p>
-							</div>
-							<div>
-								<span class="fa fa-whatsapp"></span>
-								<p>+54 11-3511-5971</p>
-							</div>
-							<div>
-								<span class="fa fa-map-marker"></span>
-								<p class="hidden-xs">Ciudad Aut&oacute;noma de Buenos Aires, Argentina</p>
-								<p class="hidden-lg hidden-md hidden-sm">Buenos Aires, Argentina</p>
-							</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-	</footer>
+	</head>
 
 </body>
 </html>
