--- a/index.html
+++ b/index.html
@@ -48,12 +48,42 @@
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Link</a></li>
+						<li><a href="#">HOME</a></li>
+						<li><a href="#">PAGES</a></li>
+						<li><a href="#">FEATURES</a></li>
+						<li><a href="#">PORTFOLIO</a></li>
+						<li><a href="#">BLOG</a></li>
+						<li><a href="#">SHOP</a></li>
+						<li><a href="#">CONTACT</a></li>
+						<li><a href="#"></a></li>
+						<li><a href="#"></a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div><!-- /.container-fluid -->
 		</nav>
 	</head>
+
+	<section class="container-fluid Section_1">
+		<div class="row">
+			<div class="col-lg-6 col-lg-offset-6 Slide">
+				<div class="row">
+					<h1 class="jumbotron">LOVE TO SKATE LIVE TO CREATE</h1>
+					<P>Ulimimate Website Builder Kit</P>
+					<a class="button-slide">LEARN MORE</a>
+					<a class="button-slide">PURCHASE</a>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="container Section_2">
+		<div class="row">
+			<div class="col-lg-12">
+				<h2>Hello! We are a Huge agency.</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis ex et mauris vulputate semper. Etiam eget lacus mi. In dapibus ultricies diam vel sollicitudin. Proin luctus posuere eros sed suscipit. Ut et magna eros. Aliquam interdum quam mi, non suscipit felis condimentum nec. Nullam ullamcorper vehicula elit. Praesent ut arcu sed leo luctus dictum eu sed urna. Phasellus et nulla et neque congue mattis quis sit amet metus.</p>
+			</div>
+		</div>
+	</section>
 
 </body>
 </html>
