--- a/index.html
+++ b/index.html
@@ -76,13 +76,53 @@
 		</div>
 	</section>
 
-	<section class="container Section_2">
+	<section class="container Section_Hello">
 		<div class="row">
 			<div class="col-lg-12">
 				<h2>Hello! We are a Huge agency.</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis ex et mauris vulputate semper. Etiam eget lacus mi. In dapibus ultricies diam vel sollicitudin. Proin luctus posuere eros sed suscipit. Ut et magna eros. Aliquam interdum quam mi, non suscipit felis condimentum nec. Nullam ullamcorper vehicula elit. Praesent ut arcu sed leo luctus dictum eu sed urna. Phasellus et nulla et neque congue mattis quis sit amet metus.</p>
 			</div>
 		</div>
+	</section>
+
+	<section class="container-fluid Section-Huge-Demos">
+		<div class="row">
+			<h2>HUGE Ultimate Creative Demos</h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<div class="col-lg-4 col-xs-12">
+				<div class="thumbnail">
+					<img src="imgs/Body/Demos_asset_01.png" class="img-responsive" alt="...">
+					<div class="caption">
+						<h3>Write your demo title here</h3>
+						<p>Lorem ipsum dolor sit consectetuer adipis cing elit nonummy ib uismod.</p>
+						<a href="#" class="btn btn-default" role="button">LAUNCH</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4 col-xs-12">
+				<div class="thumbnail">
+					<img src="imgs/Body/Demos_asset_02.png" class="img-responsive" alt="...">
+					<div class="caption">
+						<h3>Write your demo title here</h3>
+						<p>Lorem ipsum dolor sit consectetuer adipis cing elit nonummy ib uismod.</p>
+						<a href="#" class="btn btn-default" role="button">LAUNCH</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-lg-4 col-xs-12">
+				<div class="thumbnail">
+					<img src="imgs/Body/Demos_asset_03.png" class="img-responsive" alt="...">
+					<div class="caption">
+						<h3>Write your demo title here</h3>
+						<p>Lorem ipsum dolor sit consectetuer adipis cing elit nonummy ib uismod.</p>
+						<a href="#" class="btn btn-default" role="button">LAUNCH</a>
+					</div>
+				</div>
+			</div>
+		</div>
+
 	</section>
 
 </body>
