--- a/index.html
+++ b/index.html
@@ -125,5 +125,34 @@
 
 	</section>
 
+	<section class="container Counter">
+		<div class="row">
+			<div class="col-lg-3 col-xs-12">
+				<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+  					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-xs-12">
+				<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+  					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-xs-12">
+				<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">
+  					</div>
+				</div>
+			</div>
+			<div class="col-lg-3 col-xs-12">
+				<div class="progress">
+  					<div class="progress-bar" role="progressbar" aria-valuenow="39" aria-valuemin="0" aria-valuemax="100" style="width: 39%;">
+  					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 </html>
